fix: remove extra margin from iframe

--- a/assets/src/css/frontend/paypal-commerce/advanced-card-fields.scss
+++ b/assets/src/css/frontend/paypal-commerce/advanced-card-fields.scss
@@ -5,3 +5,7 @@
 .separator-with-text {
 	margin-top: -19px;
 }
+
+.give-paypal-commerce-host-card-field-container iframe {
+	margin-bottom: 0;
+}
